# nu_plugin_cassandra_query

./: Cargo.toml  README.md
src/: main.rs
