[package]
name = "nu_plugin_cassandra_query"
version = "0.1.0"
authors = ["Devyn Cairns <devyn.cairns@gmail.com>"]
edition = "2021"
description = "a nushell plugin called cassandra_query"
repository = "https://github.com/devyn/nu_plugin_cassandra_query"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for local development, you can use a path dependency
# nu-plugin = { path = "../nushell/crates/nu-plugin" }
# nu-protocol = { path = "../nushell/crates/nu-protocol", features = ["plugin"] }
nu-plugin = "0.99.0"
nu-protocol = { version = "0.99.0", features = ["plugin"] }
cassandra-cpp = "3.0"
tokio = { version = "1.0", features = ["rt", "macros"] }
chrono = "0.4"
uuid = "1.11.0"

[dev-dependencies]
# nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }
nu-plugin-test-support = { version = "0.99.0" }
